<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercadeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F2F2F2"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitleActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/title_acerca_de"
            android:textColor="#000000"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtIntegrantes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integrantes" />

        <TextView
            android:id="@+id/txtInt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integrante1" />

        <TextView
            android:id="@+id/txtInt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integrante2" />

        <TextView
            android:id="@+id/txtInt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integrante3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/description_Image"
            android:visibility="visible"
            app:srcCompat="@drawable/foto_electiva"
            tools:srcCompat="@drawable/foto_electiva"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnVolverLogin"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="#309AED"
            android:onClick="goToLogin"
            android:padding="10dp"
            android:text="@string/btn_volver"
            android:textColor="#F4F4F4" />

        <Button
            android:id="@+id/btnBorrarSharedPreferences"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#309AED"
            android:onClick="eraseData"
            android:padding="10dp"
            android:text="@string/borrar_data_preferences"
            android:textColor="#F4F4F4" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>