<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModalFragmentPreferences">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rdbuttonSi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbuttonSi_fragment" />

        <RadioButton
            android:id="@+id/rdbuttonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdbuttonNo_fragment" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSeleccionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSeleccionar"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</FrameLayout>