<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_anchorGravity="center_vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        android:text="@string/title_activity_registrar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="665dp"
        android:layout_marginBottom="66dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistrar">

        <EditText
            android:id="@+id/edit_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/hint_name_usuario"
            android:ems="10"
            android:hint="@string/hint_name_usuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/nuevapassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/constraseña_usuario"
            android:ems="10"
            android:hint="@string/constraseña_usuario"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/cedulaUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/hint_cedula_user"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/hint_email"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/hint_phone"
            android:ems="10"
            android:hint="@string/hint_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/dateNac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="@string/date_nac"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/date_nac"
            android:inputType="date"
            android:maxLines="1" />

        <Spinner
            android:id="@+id/ciudades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_femenino" />

            <RadioButton
                android:id="@+id/rdMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_masculino" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_registrar"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_registrar" />

            <Button
                android:id="@+id/btn_cancelar_registro"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="LoginActivity"
                android:text="@string/btn_cancelar_registro" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>