<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyFirstCRUD">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Buscar"
                    android:text="@string/btnBuscar" />

                <Button
                    android:id="@+id/btnActualizar"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Actualizar"
                    android:text="@string/btnActualizar" />


                <Button
                    android:id="@+id/btnEliminar"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Eliminar"
                    android:text="@string/btnEliminar" />

                <Button
                    android:id="@+id/btnRetroceder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="Retroceder"
                    android:text="@string/btnRetroceder" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="66dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtRegistrar">

                <EditText
                    android:id="@+id/xedit_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:autofillHints="@string/hint_name_usuario"
                    android:ems="10"
                    android:hint="@string/hint_name_usuario"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/xnuevapassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:autofillHints="@string/constraseña_usuario"
                    android:ems="10"
                    android:hint="@string/constraseña_usuario"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/xcedulaUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:hint="@string/hint_cedula_user"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/xedit_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:autofillHints="@string/hint_email"
                    android:ems="10"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/xeditPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:autofillHints="@string/hint_phone"
                    android:ems="10"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/xdateNac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:autofillHints="@string/date_nac"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/date_nac"
                    android:inputType="date"
                    android:maxLines="1" />

                <Spinner
                    android:id="@+id/xciudades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/xrdFemenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_femenino" />

                    <RadioButton
                        android:id="@+id/xrdMasculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_masculino" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>