<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#56CBF9"
    tools:context=".MyContentProvider">

    <TextView
        android:id="@+id/textView2"
        style="@style/txtMainContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/txtMainProviders"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:background="#f2f2f2"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnListar"
            style="@style/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getContacts"
            android:text="@string/btnContactos" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="0dp"
            android:background="#F2F2F2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txtRenderContactos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txtRenderContactos" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegresar"
        style="@style/btnListar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp"
        android:onClick="Retroceder"
        android:text="@string/btnRetroceder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</android.support.constraint.ConstraintLayout>